<resources>
    <string name="app_name">SafeDrive</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="create_account">Create here !</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="noAccount">You dont have an account ? </string>
    <string name="login">Login</string>
    <string name="btn_forgot_password">I forgot password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="when">When</string>
    <string name="picking_date">Picking date</string>
    <string name="txt_numPlate">Plate number</string>
    <string name="txtView_numPlate">Plate number</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnDestinationReached">Destination Reached</string>
    <string name="btnReportProb">Report a problem</string>
    <string name="icon_marker_alt">\uF3C5</string>

    <!-- Register -->
    <string name="firstname">Firstname : </string>
    <string name="lastname">Lastname : </string>
    <string name="phone">Phone number : </string>
    <string name="emailCA">Email : </string>
    <string name="pwdCA">Password : </string>
    <string name="createAccountTitle">Create an account</string>

    <!-- Destination reached Bad/Good -->
    <string name="btnGood">Good</string>
    <string name="btnBad">Bad</string>
    <string name="HowWasTrip">How was your trip ?</string>
    <string name="TripGoWrong">Did your trip goes wrong?</string>
    <string name="Why">Tell us why</string>
    <string name="CommentBadTrip">Enter here your comments</string>
    <string name="btnTestimony">Send my testimony</string>
    <string name="btnCancel">Cancel</string>
    <string name="ThankYouTravelling">Thank you for travelling with SafeDrive.</string>
    <string name="SeeYouSoon">See you soon!</string>
    <string name="btnGoNewRequest">Go back to new request</string>
    <string name="btnLeaveApp">Leave the app</string>
    <string name="error_field_testimony">Please tell us what happened</string>


    <string name="validate">Validate</string>
    <string name="btnShowLocation">Show Location</string>

    <!-- Report problem-->
    <string name="reportDriver">You can report a problem with a driver</string>
    <string name="warningAdmin">Send an alert to the admin</string>
    <string name="callPolice">Call 117</string>
    <string name="returnTrip">Return to \"My Trip\"</string>
    <string name="reportProb">Report a problem</string>
    <string name="SendAdmin">A security warning was sent to the administrator</string>
    <string name="title_activity_example_navigation_drawer">ExampleNavigationDrawer</string>
    <string name="logout">Logout</string>

</resources>
