<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hitchhiker.request.DestinationReached_End">


    <TextView
        android:id="@+id/textViewThankYouTravelling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ThankYouTravelling"
        android:textSize="20dp"
        android:textColor="@color/ColorBlack"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="18dp"/>

    <TextView
        android:id="@+id/textViewSeeYouSoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SeeYouSoon"
        android:textSize="20dp"
        android:textColor="@color/ColorBlack"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="18dp"/>

    <Button
        android:id="@+id/buttonNewRequest"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/btnGoNewRequest"
        android:background="@color/colorPrimary"
        android:textAllCaps="true"
        android:textColor="@color/ColorWhite"
        android:layout_marginTop="200dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/buttonLeaveApp"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/btnLeaveApp"
        android:background="@color/colorPrimary"
        android:textAllCaps="true"
        android:textColor="@color/ColorWhite"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal"/>


</FrameLayout>