<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hitchhiker.request.DestinationReached_BadTrip">



    <TextView
        android:id="@+id/textViewTripGoWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TripGoWrong"
        android:textSize="20dp"
        android:textColor="@color/ColorBlack"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="18dp" />


    <TextView
        android:id="@+id/textViewWhy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Why"
        android:textSize="20dp"
        android:textColor="@color/ColorBlack"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="18dp"
       />

    <EditText
        android:id="@+id/editTextTestimony"
        android:layout_width="336dp"
        android:layout_height="117dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="3" />


    <Button
        android:id="@+id/button_sendTestimony"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@color/ColorRed"
        android:text="@string/btnTestimony"
        android:textAllCaps="true"
        android:textColor="@color/ColorWhite"
        android:layout_marginTop="300dp"
        android:layout_gravity="center_horizontal"
      />


    <Button
        android:id="@+id/button_Cancel"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnCancel"
        android:textAllCaps="true"
        android:textColor="@color/ColorWhite"
        android:layout_marginTop="400dp"
        android:layout_gravity="center_horizontal"
       />



</FrameLayout>