<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hitchhiker.request.SecurityWarning_Admin">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/sendAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendAdmin"
        android:textColor="@color/ColorBlack"
        android:textSize="20dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnCallPolice"
        android:text="@string/callPolice"
        android:background="@color/ColorRed"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="180dp"
        android:textColor="@color/ColorWhite"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnReturnTripAdmin"
        android:text="@string/returnTrip"
        android:background="@color/colorPrimary"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="250dp"
        android:textColor="@color/ColorWhite"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"/>

</FrameLayout>