<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.safe.safedrive.ui.login.LoginActivity">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="0dp"
        android:paddingTop="40dp"
        tools:ignore="MissingConstraints">


        <EditText
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/pwdLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/ColorWhite" />

            <Button
                android:id="@+id/forgotBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="160dp">

            <TextView
                android:id="@+id/noAccount"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:text="@string/noAccount"
                android:textColor="@color/ColorBlack"/>

            <Button
                android:id="@+id/createAccountBtn"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_marginRight="200dp"
                android:background="@null"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:gravity="left"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.constraint.ConstraintLayout>