<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.CreateAccountActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="0dp"
        android:paddingTop="10dp"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">


        <TextView
            android:id="@+id/firstname"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginRight="10dp"
            android:text="@string/firstname"
            android:textColor="@color/ColorBlack"></TextView>

        <EditText
            android:id="@+id/firstnameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">


            <TextView
                android:id="@+id/lastname"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:text="@string/lastname"
                android:textColor="@color/ColorBlack" />

            <EditText
                android:id="@+id/lastnameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/phoneNumber"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:text="@string/phone"
                android:textColor="@color/ColorBlack" />

            <EditText
                android:id="@+id/phoneInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/emailCA"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:text="@string/emailCA"
                android:textColor="@color/ColorBlack" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/pwdCA"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_marginRight="10dp"
                android:text="@string/pwdCA"
                android:textColor="@color/ColorBlack" />

            <EditText
                android:id="@+id/pwdInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/valideBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/validate"
            android:textAllCaps="true"
            android:textColor="@color/ColorWhite"
            android:layout_gravity="center_vertical|center_horizontal"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>