<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="ch.safe.safedrive.ui.hitchhiker.request.CreateRequest">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewCityFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/from"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerCityFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCityFrom" />

        <TextView
            android:id="@+id/textViewCityTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCityFrom" />

        <Spinner
            android:id="@+id/spinnerCityTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCityTo" />

        <TextView
            android:id="@+id/textViewHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/when"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCityTo" />

        <TextView
            android:id="@+id/textViewCurrentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textViewHour"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCityTo" />


        <TextView
            android:id="@+id/text_id_NumPlate"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_numPlate"
            app:layout_constraintTop_toBottomOf="@+id/textViewHour" />


        <EditText
            android:id="@+id/id_edit_numPlate"
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/txt_numPlate"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@+id/text_id_NumPlate" />

        <ImageButton
            android:id="@+id/id_takingPicture"
            android:layout_width="266dp"
            android:layout_height="126dp"
            android:src="@drawable/ic_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_edit_numPlate"
            app:layout_constraintVertical_bias="0.109" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnSubmit"
            android:textAllCaps="true"
            android:textColor="@color/ColorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_takingPicture" />

        <Button
            android:id="@+id/btnGetCurrentLocation"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/awesome"
            android:text="@string/icon_marker_alt"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/spinnerCityFrom"
            app:layout_constraintStart_toEndOf="@+id/textViewCityFrom"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>