<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.hitchhiker.request.DestinationReached_GoodBad">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewHowWasTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/HowWasTrip"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101" />

        <Button
            android:id="@+id/buttonDestinationReached_Good"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnGood"
            android:textAllCaps="true"
            android:textColor="@color/ColorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHowWasTrip" />


        <Button
            android:id="@+id/buttonDestinationReached_Bad"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="88dp"
            android:background="@color/colorPrimary"
            android:text="@string/btnBad"
            android:textAllCaps="true"
            android:textColor="@color/ColorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDestinationReached_Good" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>